--- a/dom.html
+++ b/dom.html
@@ -22,7 +22,16 @@
       <h1>Welcome to my blog website</h1>
     </header>
     <main>
-      <section class="blogs">
+      <section id="blogs" class="blogs">
+        <header>
+          <h2>Blogs list</h2>
+          <ul id="blog-list">
+            <li>Blog-1</li>
+            <li>Blog-2</li>
+            <li>Blog-3</li>
+            <li>Blog-4</li>
+          </ul>
+        </header>
         <article class="blog">
           <h3 id="first-title">My Awesome Blog-1</h3>
           <p>
@@ -79,6 +88,35 @@
       third.innerText = "Title updated by JS";
       third.style.backgroundColor = "salmon";
       third.style.padding = "10px";
+
+      // create and add element by using JS
+      // create the element
+      const li = document.createElement("li");
+      li.innerText = "Blog-5";
+      // where to add
+      const ul = document.getElementById("blog-list");
+      ul.appendChild(li);
+
+      // add article
+      const article = document.createElement("article");
+      article.classList.add("blog");
+      /* const h3 = document.createElement("h3");
+      h3.innerText = "My Awesome Blog-5";
+      const p = document.createElement("p");
+      p.innerText =
+        "Accusantium vitae officia recusandae aperiam quos quo tempore excepturi!";
+      article.appendChild(h3);
+      article.appendChild(p); */
+
+      article.innerHTML = `
+      <h3>My Awesome Blog-5</h3>
+      <p> This type of blog is awesome This type of blog is awesome This type of blog is awesome
+      `;
+
+      // parent of article
+      const blogSection = document.getElementById("blogs");
+      blogSection.appendChild(article);
+
       // Explore getElementsByClassName
       const blogs = document.getElementsByClassName("blog");
       for (const blog of blogs) {
